--- a/src/index.scss
+++ b/src/index.scss
@@ -3,5 +3,16 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: system-ui, sans-serif;
+  text-align: center;
+  padding-top: 32px;
+  max-height: 100vh;
+  max-width: 100vw;
+  overflow: hidden;
+}
+
+*{
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
